feat: File*Repository 구현체 작성, 직렬화/역직렬화 코드를 메서드로 분리